--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -84,8 +84,14 @@
 
     .hero-image {
       flex: 0 0 auto;
-      width: 100%;
+      width: 50%;
       max-width: 400px;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .hero-container {
+      padding: 1rem 0rem;
     }
   }
 </style>
