--- a/src/components/MemberSection.astro
+++ b/src/components/MemberSection.astro
@@ -1,5 +1,6 @@
 ---
 import type { CollectionEntry } from "astro:content";
+import { resolvePath } from "../utils/paths";
 
 interface Props {
   section: CollectionEntry<"members">;
@@ -22,13 +23,20 @@ const { section, isFirst = false } = Astro.props;
       section.data.items.map((member) => (
         <div class="member">
           {member.image ? (
-            <img src={member.image} alt={member.name} class="member-image" />
+            <img
+              src={resolvePath(member.image)}
+              alt={member.name}
+              class="member-image"
+            />
           ) : (
             <div class="member-avatar">{member.avatar}</div>
           )}
           <div class="member-info">
             {member.id ? (
-              <a href={`/members/${member.id}`} class="member-name-link">
+              <a
+                href={`${import.meta.env.BASE_URL}/members/${member.id}`}
+                class="member-name-link"
+              >
                 <div class="member-name">{member.name}</div>
               </a>
             ) : (
