--- a/src/pages/activity.astro
+++ b/src/pages/activity.astro
@@ -55,6 +55,7 @@ activity.sort(
 <style>
     .page-header {
         margin-bottom: 3rem;
+        text-align: center;
     }
 
     .page-header h1 {
