--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,8 @@
 <footer>
-  <p>&copy; 2025 Sakata & Mori & Asatani & Nishimoto Laboratory, The University of Tokyo. All rights reserved.</p>
+  <p>
+    &copy; 2025 Sakata & Mori & Asatani & Nishimoto Laboratory, The University
+    of Tokyo. All rights reserved.
+  </p>
 </footer>
 
 <style>
