--- a/src/components/ResearchArea.astro
+++ b/src/components/ResearchArea.astro
@@ -1,8 +1,8 @@
 ---
-import type { CollectionEntry } from 'astro:content';
+import type { CollectionEntry } from "astro:content";
 
 interface Props {
-  research: CollectionEntry<'research'>;
+  research: CollectionEntry<"research">;
 }
 
 const { research } = Astro.props;
