--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,14 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 interface Props {
 	title: string;
+	isSubpage?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, isSubpage = false } = Astro.props;
 ---
 
 <!doctype html>
@@ -28,6 +31,10 @@ const { title } = Astro.props;
 		/>
 	</head>
 	<body>
-		<slot />
+		<Header />
+		<main class:list={["main-content", { subpage: isSubpage }]}>
+			<slot />
+		</main>
+		<Footer />
 	</body>
 </html>
