--- a/src/pages/en/members/[id].astro
+++ b/src/pages/en/members/[id].astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import Header from "../../components/Header.astro";
-import Footer from "../../components/Footer.astro";
+import Layout from "../../../layouts/Layout.astro";
+import Header from "../../../components/Header.astro";
+import Footer from "../../../components/Footer.astro";
 import { getCollection } from "astro:content";
-import { resolvePath } from "../../utils/paths";
+import { resolvePath } from "../../../utils/paths";
 
 export async function getStaticPaths() {
   const members = await getCollection("members");
