--- a/src/pages/en/news.astro
+++ b/src/pages/en/news.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import NewsItem from "../components/NewsItem.astro";
-import PageHeader from "../components/PageHeader.astro";
-import Section from "../components/Section.astro";
-import news from "../data/news.yaml";
+import Layout from "../../layouts/Layout.astro";
+import NewsItem from "../../components/NewsItem.astro";
+import PageHeader from "../../components/PageHeader.astro";
+import Section from "../../components/Section.astro";
+import news from "../../data/news.yaml";
 
 // Group news by year
 const newsByYear = news.reduce(
