--- a/src/pages/en/publications.astro
+++ b/src/pages/en/publications.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import PublicationItem from "../components/PublicationItem.astro";
-import PageHeader from "../components/PageHeader.astro";
-import Section from "../components/Section.astro";
+import Layout from "../../layouts/Layout.astro";
+import PublicationItem from "../../components/PublicationItem.astro";
+import PageHeader from "../../components/PageHeader.astro";
+import Section from "../../components/Section.astro";
 
-import { getPublications } from "../utils/collections";
+import { getPublications } from "../../utils/collections";
 
 const publications = await getPublications();
 
