--- a/src/pages/en/research.astro
+++ b/src/pages/en/research.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import ResearchArea from "../components/ResearchArea.astro";
-import PageHeader from "../components/PageHeader.astro";
-import Section from "../components/Section.astro";
-import { getResearch, getResearchFocus } from "../utils/collections";
-import { resolvePath } from "../utils/paths";
+import Layout from "../../layouts/Layout.astro";
+import ResearchArea from "../../components/ResearchArea.astro";
+import PageHeader from "../../components/PageHeader.astro";
+import Section from "../../components/Section.astro";
+import { getResearch, getResearchFocus } from "../../utils/collections";
+import { resolvePath } from "../../utils/paths";
 
 const research = await getResearch();
 const researchFocus = await getResearchFocus();
