--- a/src/pages/en/visit.astro
+++ b/src/pages/en/visit.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import PageHeader from "../components/PageHeader.astro";
-import Section from "../components/Section.astro";
+import Layout from "../../layouts/Layout.astro";
+import PageHeader from "../../components/PageHeader.astro";
+import Section from "../../components/Section.astro";
 ---
 
 <Layout title="新入生の方へ | 坂田・森・浅谷・西本研究室" isSubpage>
